--- a/styles/style.css
+++ b/styles/style.css
@@ -186,18 +186,18 @@ hr {
     margin: 3px 0 0 0;
 }
 
-.btn-see-more {
+#btn-see-more {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+}
+
+#btn-see-more button {
     color: rgba(224, 44, 109, 0.87);
     font-size: 16px;
     font-weight: 700;
     border: 0;
     background-color: white;
-    text-align: center;
-    display: inline-block;
-}
-
-.popular-cllection.btn-see-more {
-    text-align: end;
 }
 
 .btn-see-more i {
